fix: fix in redirecting issue and modify user-text style adding overflow-wrap

--- a/client/main.css
+++ b/client/main.css
@@ -185,8 +185,10 @@ body {
 .user-text {
   background-color: white;
   width: 100%;
+  height: auto;
   padding: 0.5rem;
   font-size: 14px;
+  overflow-wrap: break-word;
 }
 
 .feeds-btns {
